Fix z-index issue in cypress #2650

--- a/assets/scss/gutenberg-editor-style.scss
+++ b/assets/scss/gutenberg-editor-style.scss
@@ -20,8 +20,10 @@
   @import "gutenberg-editor/media-queries";
 }
 
-.interface-complementary-area {
-  .components-panel__header {
-    z-index: 9999;
+.neve-meta-button-group {
+  .components-button-group {
+    .components-button.is-primary {
+      z-index: inherit;
+    }
   }
 }
